RVM-315: fix to changing type of objects in arguments array to Method.invoke. This patch breaks apart a lot of testing for method reflection in a bid to aid simplification. The field m used solely in VMMethod.invoke should really be passed as a parameter from Method.invoke (where it is just the this reference).