@@ -15,6 +15,9 @@ package java.lang.reflect;
 import org.jikesrvm.objectmodel.VM_ObjectModel;
 import org.jikesrvm.runtime.VM_Runtime;
 import org.jikesrvm.classloader.*;
+import org.vmmagic.pragma.NoInline;
+import org.vmmagic.pragma.Pure;
+import org.vmmagic.pragma.Inline;
 
 /**
  * Library support interface of Jikes RVM
@@ -32,50 +35,97 @@ public class JikesRVMSupport {
     return classes;
   }
 
-  // Make possibly wrapped method argument compatible with expected type
-  // throwing IllegalArgumentException if it cannot be.
-  //
+  /**
+   * Make possibly wrapped method argument compatible with expected type
+   */
   @SuppressWarnings({"UnnecessaryBoxing","PMD.IntegerInstantiation"})
+  @NoInline
+  @Pure
   static Object makeArgumentCompatible(VM_Type expectedType, Object arg) {
     if (expectedType.isPrimitiveType()) {
-      if (arg instanceof java.lang.Void) {
-        if (expectedType.isVoidType()) return arg;
-      } else if (arg instanceof java.lang.Boolean) {
-        if (expectedType.isBooleanType()) return arg;
-      } else if (arg instanceof java.lang.Byte) {
+      if (arg instanceof java.lang.Byte) {
         if (expectedType.isByteType()) return arg;
-        if (expectedType.isShortType()) return new Short((Byte) arg);
-        if (expectedType.isIntType()) return new Integer((Byte) arg);
-        if (expectedType.isLongType()) return new Long((Byte) arg);
+        if (expectedType.isShortType()) return Short.valueOf((Byte) arg);
+        if (expectedType.isIntType()) return Integer.valueOf((Byte) arg);
+        if (expectedType.isLongType()) return Long.valueOf((Byte) arg);
       } else if (arg instanceof java.lang.Short) {
         if (expectedType.isShortType()) return arg;
-        if (expectedType.isIntType()) return new Integer((Short) arg);
-        if (expectedType.isLongType()) return new Long((Short) arg);
+        if (expectedType.isIntType()) return Integer.valueOf((Short) arg);
+        if (expectedType.isLongType()) return Long.valueOf((Short) arg);
       } else if (arg instanceof java.lang.Character) {
         if (expectedType.isCharType()) return arg;
-        if (expectedType.isIntType()) return new Integer((Character) arg);
-        if (expectedType.isLongType()) return new Long((Character) arg);
+        if (expectedType.isIntType()) return Integer.valueOf((Character) arg);
+        if (expectedType.isLongType()) return Long.valueOf((Character) arg);
       } else if (arg instanceof java.lang.Integer) {
         if (expectedType.isIntType()) return arg;
-        if (expectedType.isLongType()) return new Long((Integer) arg);
-      } else if (arg instanceof java.lang.Long) {
-        if (expectedType.isLongType()) return arg;
+        if (expectedType.isLongType()) return Long.valueOf((Integer) arg);
       } else if (arg instanceof java.lang.Float) {
-        if (expectedType.isFloatType()) return arg;
-        if (expectedType.isDoubleType()) return new Double((Float) arg);
-      } else if (arg instanceof java.lang.Double) {
-        if (expectedType.isDoubleType()) return arg;
+        if (expectedType.isDoubleType()) return Double.valueOf((Float) arg);
       }
+    }    
+    return arg;
+  }
+  
+  /**
+   * Are the 2 arguments compatible? Throw IllegalArgumentException if they
+   * can't be made compatible.
+   */
+  @Pure
+  @Inline
+  static boolean isArgumentCompatible(VM_Type expectedType, Object arg) {
+    if (expectedType.isPrimitiveType()) {
+      return isPrimitiveArgumentCompatible(expectedType, arg);
     } else {
-      if (arg == null) return arg; // null is always ok
+      if (arg == null) return true; // null is always ok
       VM_Type actualType = VM_ObjectModel.getObjectType(arg);
       if (expectedType == actualType ||
           expectedType == VM_Type.JavaLangObjectType ||
           VM_Runtime.isAssignableWith(expectedType, actualType)) {
-        return arg;
+        return true;
+      } else {
+        throwNewIllegalArgumentException();
+        return false;
       }
     }
+  }
+  
+  @NoInline
+  private static void throwNewIllegalArgumentException() {
     throw new IllegalArgumentException();
+  }
+  @Pure
+  @Inline
+  private static boolean isPrimitiveArgumentCompatible(VM_Type expectedType, Object arg) {
+    if (arg instanceof java.lang.Void) {
+      if (expectedType.isVoidType()) return true;
+    } else if (arg instanceof java.lang.Boolean) {
+      if (expectedType.isBooleanType()) return true;
+    } else if (arg instanceof java.lang.Byte) {
+      if (expectedType.isByteType()) return true;
+      if (expectedType.isShortType()) return false;
+      if (expectedType.isIntType()) return false;
+      if (expectedType.isLongType()) return false;
+    } else if (arg instanceof java.lang.Short) {
+      if (expectedType.isShortType()) return true;
+      if (expectedType.isIntType()) return false;
+      if (expectedType.isLongType()) return false;
+    } else if (arg instanceof java.lang.Character) {
+      if (expectedType.isCharType()) return true;
+      if (expectedType.isIntType()) return false;
+      if (expectedType.isLongType()) return false;
+    } else if (arg instanceof java.lang.Integer) {
+      if (expectedType.isIntType()) return true;
+      if (expectedType.isLongType()) return false;
+    } else if (arg instanceof java.lang.Long) {
+      if (expectedType.isLongType()) return true;
+    } else if (arg instanceof java.lang.Float) {
+      if (expectedType.isFloatType()) return true;
+      if (expectedType.isDoubleType()) return false;
+    } else if (arg instanceof java.lang.Double) {
+      if (expectedType.isDoubleType()) return true;
+    }
+    throwNewIllegalArgumentException();
+    return false;
   }
 
   public static Field createField(VM_Field f) {
